<resources>
    <string name="app_name">Taxessory</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Sign In</string>
    <string name="reset">Reset Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="finger_auth">Fingerprint Authentication</string>
    <string name="instructions">Place your fingertip on the Home button to verify your identity
</string>
    <string name="title_activity_pin">PinActivity</string>
    <string name="title_activity_dash">DashActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
